--- a/views/public/detailPage.ejs
+++ b/views/public/detailPage.ejs
@@ -3,13 +3,17 @@
     <div class="container-fluid padd-top">
         <div class="container">
             <div class="row gx-4 gx-lg-5 align-datas-center">
-                <div class="col-lg-6 px-5"><img class="img-fluid rounded mb-4 mb-lg-0" src="/food/<%= locals.data.image %>"
-                        alt="<%= locals.data.foodName %>" /></div>
+                
+                <div class="col-lg-6 px-5"><img class="img-fluid rounded mb-4 mb-lg-0"
+                        src="/food/<%= locals.data.image %>" alt="<%= locals.data.foodName %>" /></div>
                 <div class="col-lg-6">
+                    <div class="alert d-none ml-5" role="alert" id="alertResult">
+                        <%= locals.msg %>
+                    </div>
                     <%= data.category %>
                         &nbsp;
-                        <i class="bi bi-circle-fill text-<%= locals.data.type === 1 ? "success" : "danger" %>"></i>
-                      
+                        <i class="bi bi-circle-fill text-<%= locals.data.type === 1 ? " success" : "danger" %>"></i>
+
                         <h1 class="font-weight-light">
                             <%= locals.data.foodName %>
                         </h1>
@@ -29,7 +33,15 @@
                         <p>
                             <%= locals.data.ingredients %>
                         </p>
-                        <a class="btn btn-warning" href="#">Add to Cart</a>
+                        <form method="post" id="addToCart">
+                            <div class="mb-3">
+                                <input type="hidden" id="foodName" name="foodName" value="<%= locals.data.foodName %>">				
+                                <input type="hidden" id="foodId" name="foodId" value="<%= locals.data._id %>">				
+                                <input type="hidden" id="foodType" name="foodType" value="<%= locals.data.type===1 ? "Veg" : "Non-Veg" %>">				
+                                <input type="hidden" id="price" name="price" value="<%= locals.data.discPrice %>">				
+                            </div>
+                            <button class="btn btn-warning w-25 fs-5 rounded-2">Add to cart</button>
+                        </form>
                 </div>
             </div>
             <!-- Call to Action-->
@@ -75,8 +87,107 @@
         </div>
     </div>
 
-
-
+    <script>
+        document.getElementById('addToCart').addEventListener('submit', async (event) => {
+            event.preventDefault();
+            
+            const formData = new FormData(event.target);
+            const foodName = formData.get('foodName');
+            const foodId = formData.get('foodId');
+            const foodType = formData.get('foodType');
+            const price = formData.get('price');
+            // const message = `Food Name: ${foodname}\nFood ID: ${foodId}\nFood Type: ${foodType}\nPrice: ${price}`;
+            // alert(message);
+            try {
+                if(!foodName || !foodId || !foodType){
+                    throw new Error("can not add food to Cart")
+                    
+                }else{
+                    const response = await fetch('/cart', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({foodName, foodId, foodType, price})
+                    });
+                    
+                    const data = await response.json();
+                    alert(JSON.stringify(data)); 
+                    const alertDiv = document.getElementById('alertResult');
+                    
+                    if (data.status === 'success') { 
+                        alertDiv.classList.remove('alert-danger');
+                        alertDiv.classList.add('alert-success');
+                        alertDiv.classList.remove('d-none');
+                        alertDiv.innerText = data.msg;
+                        //page load
+                    } else {
+                        alertDiv.classList.remove('alert-success');
+                        alertDiv.classList.add('alert-danger');
+                        alertDiv.classList.remove('d-none');
+                        alertDiv.innerText = data.msg;
+                    }
+                }
+                
+            }catch (error) {
+                const alertDiv = document.getElementById('alertResult')
+                alertDiv.classList.add("alert-danger")
+                alertDiv.classList.remove("d-none")
+                alertDiv.innerText = 'An error occurred. Please try again later.';
+            }
+        });
+    
+    </script><script>
+        document.getElementById('addToCart').addEventListener('submit', async (event) => {
+            event.preventDefault();
+            
+            const formData = new FormData(event.target);
+            const foodName = formData.get('foodName');
+            const foodId = formData.get('foodId');
+            const foodType = formData.get('foodType');
+            const price = formData.get('price');
+            // const message = `Food Name: ${foodname}\nFood ID: ${foodId}\nFood Type: ${foodType}\nPrice: ${price}`;
+            // alert(message);
+            try {
+                if(!foodName || !foodId || !foodType){
+                    throw new Error("can not add food to Cart")
+                    
+                }else{
+                    const response = await fetch('/cart', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({foodName, foodId, foodType, price})
+                    });
+                    
+                    const data = await response.json();
+                    alert(JSON.stringify(data)); 
+                    const alertDiv = document.getElementById('alertResult');
+                    
+                    if (data.status === 'success') { 
+                        alertDiv.classList.remove('alert-danger');
+                        alertDiv.classList.add('alert-success');
+                        alertDiv.classList.remove('d-none');
+                        alertDiv.innerText = data.msg;
+                        //page load
+                    } else {
+                        alertDiv.classList.remove('alert-success');
+                        alertDiv.classList.add('alert-danger');
+                        alertDiv.classList.remove('d-none');
+                        alertDiv.innerText = data.msg;
+                    }
+                }
+                
+            }catch (error) {
+                const alertDiv = document.getElementById('alertResult')
+                alertDiv.classList.add("alert-danger")
+                alertDiv.classList.remove("d-none")
+                alertDiv.innerText = 'An error occurred. Please try again later.';
+            }
+        });
+    
+    </script>
 
 
     <!-- include footer -->
