--- a/views/public/includes/header.ejs
+++ b/views/public/includes/header.ejs
@@ -27,9 +27,13 @@
   <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
 
+  <!-- <link rel="stylesheet" href="/node_modules/izitoast/dist/css/iziToast.min.css"> -->
+
   <!-- Template Main CSS Files -->
   <link href="../assets/css/variables.css" rel="stylesheet">
   <link href="../assets/css/main.css" rel="stylesheet">
+  <link href="../assets/css/cart.css" rel="stylesheet">
+
 
 </head>
 
@@ -68,7 +72,8 @@
                   <li><a class="dropdown-item" href="/order-history">Order History</a></li>
                   <li><a class="dropdown-item" href="/track-order">Track Order</a></li>
                   <hr>
-                  <li><a class="dropdown-item" href="/logout">logout</a></li>
+                  <!-- <li><a class="dropdown-item" href="/logout">logout</a></li> -->
+                  <li><a class="dropdown-item" href="#">logout</a></li>
                 </ul>
               </div>
               <!-- <a href="" class="mx-3"><span class="bi bi-power"></span> </a> -->
