--- a/views/public/login.ejs
+++ b/views/public/login.ejs
@@ -38,7 +38,7 @@
 				</div>
 				<button class="btn btn-warning w-100 py-8 fs-4 mb-4 rounded-2">Login</button>
 				<div class="d-flex align-items-center justify-content-center">
-					<a class="text-primary fw-bold" href="./forgotPassword">Forgot Password ?</a>
+					<a class="text-primary fw-bold" href="/forgot-password">Forgot Password ?</a>
 					<a class="text-primary fw-bold ms-2" href="/signup">Create an account</a>
 				</div>
 			  </form>
