--- a/views/public/signup.ejs
+++ b/views/public/signup.ejs
@@ -51,7 +51,9 @@
                                     <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Confirm Password'">				
                                 </div>
                                 <button class="btn btn-warning w-100 py-8 fs-4 mb-4 rounded-2">Submit</button>
-                                <a href="/login" style="padding-left: 95px;">login to your Account</a>
+                                <div class="d-flex align-items-center justify-content-center">
+                                    <a href="/login" class="fw-bold">login</a>
+                                </div>
                                 </form>
                             </div>
                         </div>
