--- a/views/public/forgotPassword.ejs
+++ b/views/public/forgotPassword.ejs
@@ -14,13 +14,13 @@
 				<%= locals.msg %>
 			</div>
 			<div class="card-body">
-			  <h1 class="text-center">Verify Number</h1>
-			  <form class="login_form" method="post" id="mobileNumberValidateForm" onsubmit="return validateMobileNumber()">
+			  <h1 class="text-center">Forgot Password</h1>
+			  <form method="post" id="forgotPasswordForm">
 				<div class="mb-3">
-					<label for="password" id="passwordLabel" class="form-label">Enter mobile number used to create account</label>
-					<input type="text" class="form-control" id="mobileNumber" name="mobileNumber" placeholder="Mobile Number">				
+					<label for="forgotemail" id="forgotemailLabel" class="form-label">Email</label>
+					<input type="email" class="form-control" id="forgotEmail" name="forgotEmail" placeholder="Email" required>				
 				</div>
-				<button class="btn btn-warning w-100 py-8 fs-4 mb-4 rounded-2">Send OTP</button>
+				<button class="btn btn-warning w-100 py-8 fs-4 mb-4 rounded-2" id="forgotBtn">Send</button>
 			  </form>
 			</div>
 		  </div>
@@ -31,23 +31,23 @@
 </div>
 
 <script>
-	document.getElementById('mobileNumberValidateForm').addEventListener('submit', async (event) => {
+	document.getElementById('forgotPasswordForm').addEventListener('submit', async (event) => {
 		event.preventDefault();
-		
+        const btn = document.getElementById("forgotBtn")
+		btn.innerHTML = "processing.."
 		const formData = new FormData(event.target);
-		const mobileNumber = formData.get('mobileNumber');
-		
+		const forgotEmail = formData.get('forgotEmail');
 		try {
-			const response = await fetch('/validateNumber', {
+			const response = await fetch('/forgot-password', {
 			method: 'POST',
 			headers: {
 				'Content-Type': 'application/json'
 			},
-			body: JSON.stringify({ mobileNumber })
+			body: JSON.stringify({ forgotEmail })
 			});
 			
 			const data = await response.json();
-			// alert(JSON.stringify(data)); 
+			console.log(JSON.stringify(data)); 
 			const alertDiv = document.getElementById('alertResult');
 			
 			if (data.status === 'success') { 
@@ -55,8 +55,9 @@
 				alertDiv.classList.add('alert-success');
 				alertDiv.classList.remove('d-none');
 				alertDiv.innerText = data.msg;
-				//page load
-				window.location.href = `/verifyOtp?userMobileNumber=${mobileNumber}`;
+				btn.disabled = true
+				btn.innerHTML = "send"
+				
 			} else {
 				alertDiv.classList.remove('alert-success');
 				alertDiv.classList.add('alert-danger');
@@ -72,7 +73,5 @@
 	});
 
 </script>
-
-<script src="assets/js/validate.js"></script>
 <!-- include footer -->
 <%- include('./includes/footer') %>
