--- a/views/public/myProfile.ejs
+++ b/views/public/myProfile.ejs
@@ -14,13 +14,14 @@
                                 </div>
                             </div>
                             <hr>
+                            
                             <br>
                             <div class="row py-1">
                                 <div class="col-sm-3">
                                     <p class="mb-0">Full Name</p>
                                 </div>
                                 <div class="col-sm-9">
-                                    <p class="text-muted mb-0">Sanjay M S</p>
+                                    <p class="text-muted mb-0"><%= locals.data.firstName+" "+data.lastName %></p>
                                 </div>
                             </div>
                             <hr>
@@ -29,7 +30,7 @@
                                     <p class="mb-0">Email</p>
                                 </div>
                                 <div class="col-sm-9">
-                                    <p class="text-muted mb-0">Sanjay@gmail.com</p>
+                                    <p class="text-muted mb-0"><%= data.email %></p>
                                 </div>
                             </div>
                             <hr>
@@ -38,7 +39,7 @@
                                     <p class="mb-0">Phone</p>
                                 </div>
                                 <div class="col-sm-9">
-                                    <p class="text-muted mb-0">1234567890</p>
+                                    <p class="text-muted mb-0"><%= data.phone %></p>
                                 </div>
                             </div>
                             <hr>
